deployments/kubernetes/statefulset.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ephemeral-roles
  namespace: ephemeral-roles
  labels:
    app: ephemeral-roles
spec:
  replicas: 10
  selector:
    matchLabels:
      app: ephemeral-roles
  serviceName: ephemeral-roles
  template:
    metadata:
      labels:
        app: ephemeral-roles
    spec:
      terminationGracePeriodSeconds: 90
      containers:
        - name: ephemeral-roles
          image: ewohltman/ephemeral-roles:v1.16.5
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8081
          readinessProbe:
            httpGet:
              path: /readyz
              port: http
            initialDelaySeconds: 1
            periodSeconds: 2
            timeoutSeconds: 2
            failureThreshold: 3
