deployments/kubernetes/jaeger-service.yml
---
kind: Service
apiVersion: v1
metadata:
  name: jaeger
  namespace: ephemeral-roles
  labels:
    app: jaeger
spec:
  selector:
    app: jaeger
  ports:
    - port: 16686
