deployments/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ephemeral-roles
  namespace: ephemeral-roles
  labels:
    app: ephemeral-roles
spec:
  selector:
    app: ephemeral-roles
  ports:
    - name: http
      port: 80
      targetPort: http
  type: LoadBalancer
